--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -1,3 +1,19 @@
 h1 タスク一覧
 
 = link_to '新規登録', new_task_path, class: 'btn btn-primary'
+
+.mb-3
+table.table.table-hover
+  thead.thead-default
+    tr
+      th= Task.human_attribute_name(:task_name)
+      th= Task.human_attribute_name(:created_at)
+      th
+  tbody
+    - @tasks.each do |task|
+      tr
+        td= link_to task.task_name, task
+        td= task.created_at
+        td
+          = link_to '編集', edit_task_path(task), class: 'btn btn-primary mr-3'
+          = link_to  "削除", task, method: :delete, data: { confirm: "タスク「#{task.task_name}」を削除します。よろしいですか？" }, class: 'btn btn-danger'
