--- a/app/views/tasks/new.html.slim
+++ b/app/views/tasks/new.html.slim
@@ -10,4 +10,4 @@ h1 タスクの新規登録
     .form-group
       = f.label :タスクの内容
       = f.text_area :memo, rows:5, class: 'form-control', id: 'task_description'
-    = f.submit nil, class: 'btn btn-primary'
+    = f.submit '登録する', class: 'btn btn-primary'
