--- a/app/views/tasks/new.html.slim
+++ b/app/views/tasks/new.html.slim
@@ -9,5 +9,5 @@ h1 タスクの新規登録
       = f.text_field :task_name, class: 'form-control', id: 'task_name'
     .form-group
       = f.label :タスクの内容
-      = f.text_area :memo, rows:5, class: 'form-control', id: 'task_description'
+      = f.text_area :memo, rows:5, class: 'form-control', id: 'memo'
     = f.submit '登録する', class: 'btn btn-primary'
