--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -1,6 +1,6 @@
-h1 タスク一覧
+h1 = t('view.task_index')
 
-= link_to '新規登録', new_task_path, class: 'btn btn-primary'
+= link_to t('view.new_record'), new_task_path, class: 'btn btn-primary'
 
 .mb-3
 table.table.table-hover
@@ -15,5 +15,5 @@ table.table.table-hover
         td= link_to task.task_name, task
         td= task.created_at
         td
-          = link_to '編集', edit_task_path(task), class: 'btn btn-primary mr-3'
-          = link_to  "削除", task, method: :delete, data: { confirm: "タスク「#{task.task_name}」を削除します。よろしいですか？" }, class: 'btn btn-danger'
+          = link_to t('view.edit'), edit_task_path(task), class: 'btn btn-primary mr-3'
+          = link_to  t('view.delete'), task, method: :delete, data: { confirm: t('confirm.delete_confirmation') }, class: 'btn btn-danger'
