--- a/app/views/tasks/new.html.slim
+++ b/app/views/tasks/new.html.slim
@@ -1,13 +1,6 @@
-h1 タスクの新規登録
+h1 = t('view.new_task')
 
 .nav.justifu-content-end
-  = link_to '一覧', tasks_path, class: 'nav-link'
+  = link_to t('view.list'), tasks_path, class: 'nav-link'
 
-  = form_with model: @task, local: true do |f|
-    .form-group
-      = f.label :タスク名
-      = f.text_field :task_name, class: 'form-control', id: 'task_name'
-    .form-group
-      = f.label :タスクの内容
-      = f.text_area :memo, rows:5, class: 'form-control', id: 'memo'
-    = f.submit '登録する', class: 'btn btn-primary'
+= render partial: 'form', locals: { task: @task } 
