--- a/app/views/tasks/show.html.slim
+++ b/app/views/tasks/show.html.slim
@@ -1,7 +1,7 @@
-h1 タスクの詳細
+h1 = t('view.newtask')
 
 nav.justify-content-end
-  = link_to  "一覧", tasks_path, class: 'nav-link'
+  = link_to  t('view.list'), tasks_path, class: 'nav-link'
 table.table.table-hover
   tbody
     tr
@@ -20,5 +20,5 @@ table.table.table-hover
       th= Task.human_attribute_name(:updated_at)
       td= @task.updated_at
 
-= link_to  "編集", edit_task_path, class: 'btn btn-primary mr-3' 
-= link_to  "削除", @task, method: :delete, data: { confirm: "タスク「#{@task.task_name}」を削除します。よろしいですか？" }, class: 'btn btn-danger'
+= link_to  t('view.edit'), edit_task_path, class: 'btn btn-primary mr-3' 
+= link_to  t('view.delete'), @task, method: :delete, data: { confirm: t('confirm.delete_confilmation') }, class: 'btn btn-danger'
