--- a/app/views/tasks/show.html.slim
+++ b/app/views/tasks/show.html.slim
@@ -1,4 +1,4 @@
-h1 = t('view.newtask')
+h1 = t('view.show_task')
 
 nav.justify-content-end
   = link_to  t('view.list'), tasks_path, class: 'nav-link'
