--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -8,12 +8,16 @@ table.table.table-hover
     tr
       th= Task.human_attribute_name(:task_name)
       th= Task.human_attribute_name(:created_at)
+      th= Task.human_attribute_name(:end_time)
       th
   tbody
     - @tasks.each do |task|
       tr
         td= link_to task.task_name, task
         td= task.created_at.strftime("%Y-%m-%d %H:%M:%S")
+        td=task.end_time
         td
           = link_to t('view.edit'), edit_task_path(task), class: 'btn btn-primary mr-3'
           = link_to  t('view.delete'), task, method: :delete, data: { confirm: t('confirm.delete_confirmation') }, class: 'btn btn-danger'
+
+  = link_to "終了期限でソートする", tasks_path(end_time: "true")
