--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -9,15 +9,23 @@ table.table.table-hover
       th= Task.human_attribute_name(:task_name)
       th= Task.human_attribute_name(:created_at)
       th= Task.human_attribute_name(:end_time)
+      th= Task.human_attribute_name(:status)
       th
   tbody
     - @tasks.each do |task|
       tr
         td= link_to task.task_name, task
         td= task.created_at.strftime("%Y-%m-%d %H:%M:%S")
-        td=task.end_time
+        td= task.end_time
+        - if task.status == 0
+          td = "未着手" 
+        - elsif task.status == 1
+          td = "着手中"
+        - else
+          td = "完了"
         td
           = link_to t('view.edit'), edit_task_path(task), class: 'btn btn-primary mr-3'
           = link_to  t('view.delete'), task, method: :delete, data: { confirm: t('confirm.delete_confirmation') }, class: 'btn btn-danger'
 
   = link_to "終了期限でソートする", tasks_path(end_time: "true")
+  
