--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -2,6 +2,18 @@ h1 = t('view.task_index')
 
 = link_to t('view.new_record'), new_task_path, class: 'btn btn-primary'
 
+p = t('view.search')
+= form_with model: Task.new, method: :get, url:tasks_path, local: true do |f|
+  .form-group
+    = f.label :taks_name_search, 'タイトル検索'
+    = f.text_field :task_name, class: 'form-control', id: 'task_name'
+  .form-group
+    = f.label :status_search, '状態検索'
+    / = f.select :status, Task.statuses.keys, class: 'form-control', include_blank: true, selected: ''
+    = select :task, :status, [["未着手", 0], ["着手中", 1], ["完了", 2]], class: 'form-control', id: 'status'
+    = f.hidden_field :search, value: 'true'
+  = submit_tag t('view.search'), name: nil, class: 'btn btn-primary'
+
 .mb-3
 table.table.table-hover
   thead.thead-default
