--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -10,7 +10,7 @@ p = t('view.search')
   .form-group
     = f.label :status_search, '状態検索'
     / = f.select :status, Task.statuses.keys, class: 'form-control', include_blank: true, selected: ''
-    = select :task, :status, [["未着手", 0], ["着手中", 1], ["完了", 2]], class: 'form-control', id: 'status'
+    = select :task, :status, [["未選択", ""], ["未着手", 0], ["着手中", 1], ["完了", 2]], class: 'form-control', id: 'status'
     = f.hidden_field :search, value: 'true'
   = submit_tag t('view.search'), name: nil, class: 'btn btn-primary'
 
@@ -33,7 +33,7 @@ table.table.table-hover
           td = "未着手" 
         - elsif task.status == 1
           td = "着手中"
-        - else
+        - elsif task.status == 2
           td = "完了"
         td
           = link_to t('view.edit'), edit_task_path(task), class: 'btn btn-primary mr-3'
