--- a/app/views/tasks/_form.html.slim
+++ b/app/views/tasks/_form.html.slim
@@ -15,6 +15,6 @@
     = f.date_select :end_time, {use_month_numbers: true}, class: 'form-control', id: 'end_time'
   .form-group
     = f.label :status
-    = f.select :status, [["未着手", 0], ["着手中", 1], ["完了", 2]], class: 'form-control', id: 'status'
+    = f.select :status, [[t("view.not_started"), 0], [t("view.started"), 1], [t("view.complete"), 2]], class: 'form-control', id: 'status'
 
   = f.submit nil, class: 'btn btn-primary'
