priority soat desc

--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -43,5 +43,7 @@ table.table.table-hover
 
   = link_to t('view.soat_end_time'), tasks_path(end_time: "true")
   br
+  = link_to t('view.soat_priority'), tasks_path(priority: "true")  
+  br
   = link_to t('view.back'), tasks_path
   
