--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,3 +14,16 @@
  *= require_tree .
  *= require_self
  */
+
+ .btn {
+   margin-right: 10px;
+ }
+ form {
+   margin-bottom: 10px;
+   padding: 15px;
+   background-color: #EEEEEE;
+ }
+ h1 {
+   margin-top: 0;
+ }
+ 
