--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,6 +8,9 @@ html
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   body
-    - if flash.notice.present?
-      .alert.alert-success= flash.notice
-    = yield
+    .app-title.navbar.navbar-expand-md.navbar-light.bg-info
+      .navbar-brand Task Management
+    .container
+      - if flash.notice.present?
+        .alert.alert-success= flash.notice
+      = yield
