--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -11,7 +11,7 @@ p = t('view.search')
     = f.label :status_search, t('view.search_status')
     = select :task, :status, [[t('view.unselected'), ""], [t('view.not_started'), 0], [t('view.started'), 1], [t('view.complete'), 2]], class: 'form-control', id: 'status'
     = f.hidden_field :search, value: 'true'
-  = submit_tag t('view.search'), name: nil, class: 'btn btn-primary'
+  = submit_tag t('view.search'), name: nil, class: 'btn btn-primary btn-sm'
 
 .mb-3
 table.table.table-hover
@@ -37,14 +37,13 @@ table.table.table-hover
           td = t('view.complete')
         td= task.priority_i18n
         td
-          = link_to t('view.edit'), edit_task_path(task), class: 'btn btn-primary mr-3'
-          = link_to  t('view.delete'), task, method: :delete, data: { confirm: t('confirm.delete_confirmation') }, class: 'btn btn-danger'
+          = link_to t('view.edit'), edit_task_path(task), class: 'btn btn-primary mr-3 btn-sm'
+          = link_to  t('view.delete'), task, method: :delete, data: { confirm: t('confirm.delete_confirmation') }, class: 'btn btn-danger btn-sm'
 
-  = link_to t('view.soat_end_time'), tasks_path(end_time: "true")
-  br
-  = link_to t('view.soat_priority'), tasks_path(priority: "true")  
-  br
-  = link_to t('view.back'), tasks_path
-
+  .container
+  = link_to t('view.back'), tasks_path, class: 'btn btn-info pull-right btn-sm'
+  = link_to t('view.soat_end_time'), tasks_path(end_time: "true"), class: 'btn btn-info pull-right btn-sm'
+  = link_to t('view.soat_priority'), tasks_path(priority: "true"), class: 'btn btn-info pull-right btn-sm'
+  
 = paginate @tasks
   
