ログイン機能実装

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -13,10 +13,10 @@ html
 
       ul.navbar-nav.ml-auto
         - if current_user
-          li.navi-item= link_to 'タスク一覧', tasks_path, class: 'nav-link'
-          li.navi-item= link_to 'ログアウト', logout_path, method: :delete, class: 'nav-link'
+          li.navbar-text= link_to 'タスク一覧', tasks_path, class: 'nav-link'
+          li.navbar-text= link_to 'ログアウト', logout_path, method: :delete, class: 'nav-link'
         - else
-          li.nav-item= link_to 'ログイン', login_path, class: 'nav-link'
+          li.navbar-text= link_to 'ログイン', login_path, class: 'nav-link'
     .container
       - if flash.notice.present?
         .alert.alert-success= flash.notice
