--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,11 +19,14 @@
    margin-right: 10px;
  }
  form {
-   margin-bottom: 10px;
+   margin: 10px 0;
    padding: 15px;
    background-color: #EEEEEE;
  }
  h1 {
    margin-top: 0;
+ }
+ li {
+  list-style-type: none;
  }
  
