add index tasks user_id

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -16,6 +16,7 @@ html
           li.navbar-text= link_to 'タスク一覧', tasks_path, class: 'nav-link'
           li.navbar-text= link_to 'ログアウト', logout_path, method: :delete, class: 'nav-link'
         - else
+          li.navbar-text= link_to 'サインアップ', new_user_path, class: 'nav-link'
           li.navbar-text= link_to 'ログイン', login_path, class: 'nav-link'
     .container
       - if flash.notice.present?
