--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -20,5 +20,5 @@ h1 = t('view.sign_up')
     = f.password_field :password, class: 'form-control', id: 'password'
   .form-group
     = f.label :password_confirmation
-    = f.password_field :password_confirmation, class: 'form-control', id: 'password_digest'
+    = f.password_field :password_confirmation, class: 'form-control', id: 'password_confirmation'
   = f.submit t('view.create_my_account')
