--- a/app/views/admin/users/_form.html.slim
+++ b/app/views/admin/users/_form.html.slim
@@ -6,7 +6,7 @@
     - @user.errors.full_messages.each do |message|
       li = message
 
-= form_with(model: @user, local: true) do |f|
+= form_with(model: [:admin, user], local: true) do |f|
   .form-group
     = f.label :name
     = f.text_field :name, class: 'form-control', id: 'name'
@@ -15,8 +15,8 @@
     = f.email_field :email, class: 'form-control', id: 'email'
   .form-check
     = f.label :admin, class: 'form-check-label' do
-      = f.= check_box :admin, class: 'form-check-input'
-      | 管理者権限
+      = f.check_box :admin, class: 'form-check-input'
+      | t('admin')
   .form-group
     = f.label :password
     = f.password_field :password, class: 'form-control', id: 'password'
