--- a/app/views/admin/users/index.html.slim
+++ b/app/views/admin/users/index.html.slim
@@ -1,25 +1,27 @@
 h1 ユーザー一覧
 
-= linsto '新規登録', new_admin_user_path, class: 'btn btn-primary'
+= link_to t('view.new_record'), new_admin_user_path, class: 'btn btn-primary'
 
 .mb-3
 table.table.table-hover
   thead.thead-default
     tr
-      th= User.humanh_attribute_name(:name)
-      th= User.humanh_attribute_name(:email)
-      th= User.humanh_attribute_name(:admin)
-      th= User.humanh_attribute_name(:created_at)
-      th= User.humanh_attribute_name(:updated_at)
+      th= User.human_attribute_name(:name)
+      th= User.human_attribute_name(:email)
+      th= User.human_attribute_name(:admin)
+      th= User.human_attribute_name(:created_at)
+      th= User.human_attribute_name(:updated_at)
+      th= User.human_attribute_name(:task_number)      
       th
   tbody
     - @users.each do |user|
       tr
         td= link_to user.name, [:admin, user]
         td= user.email
-        td= user.admin? ? 'あり' : 'なし'
+        td= user.admin? ? "あり" : "なし"
         td= user.created_at
         td= user.updated_at
+        td= user.tasks.count
         td
-          = link_to '編集', edit_admin_user_path(user), class: 'btn btn-primary mr-3'
-          = link_to '削除', [:admin, user], method: :delete, date: { confirm: "ユーザーを削除します。よろしいですか？" }, class: 'btn btn-danger'
+          = link_to t('view.edit'), edit_admin_user_path(user), class: 'btn btn-primary mr-3'
+          = link_to t('view.delete'), [:admin, user], method: :delete, data: { confirm: t('confirm.delete_user_confirmation') }, class: 'btn btn-danger'
