--- a/app/views/admin/users/new.html.slim
+++ b/app/views/admin/users/new.html.slim
@@ -1,6 +1,6 @@
 h1 = t('view.sign_up')
 
 .nav.justify-content-end
-  = linl_to '一覧', admin_users_path, class: 'nav-link'
+  = link_to t('view.list'), admin_users_path, class: 'nav-link'
 
 = render partial: 'form', locals: { user: @user }
