--- a/app/views/tasks/edit.html.slim
+++ b/app/views/tasks/edit.html.slim
@@ -1,6 +1,6 @@
 h1 = t('view.edit_task')
 
-.nam.justify-content-end
+nav.justify-content-end
   = link_to  t('view.list'), tasks_path, class: 'nav-link'
 
 = render partial: 'form', locals: { task: @task } 
