--- a/app/views/tasks/new.html.slim
+++ b/app/views/tasks/new.html.slim
@@ -1,6 +1,6 @@
 h1 = t('view.new_task')
 
-.nav.justifu-content-end
+nav.justify-content-end
   = link_to t('view.list'), tasks_path, class: 'nav-link'
 
 = render partial: 'form', locals: { task: @task } 
