--- a/app/views/tasks/_form.html.slim
+++ b/app/views/tasks/_form.html.slim
@@ -19,6 +19,7 @@
   .form-group
     = f.label :priority
     = f.select :priority, [[t("enums.task.priority.low"), "low"], [t("enums.task.priority.medium"), "medium"], [t("enums.task.priority.high"), "high"]] , class: 'form-control', id: 'priority'
-
+    
+  = form.collection_check_boxes(:label_ids, Label.all, :id, :name)
 
   = f.submit nil, class: 'btn btn-primary'
