--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -9,6 +9,9 @@ h1 = t('view.task_index')
   .form-group
     = f.label :status_search, t('view.search_status')
     = select :task, :status, [[t('view.unselected'), ""], [t('view.not_started'), 0], [t('view.started'), 1], [t('view.complete'), 2]], class: 'form-control', id: 'status'
+  .form-group
+    = f.label :label, t('view.search_status')
+    = f.select("label_id", Label.pluck(:title, :id), { include_blank: true })
     = f.hidden_field :search, value: 'true'
   = submit_tag t('view.search'), name: nil, class: 'btn btn-primary btn-sm'
 
@@ -21,6 +24,7 @@ table.table.table-hover
       th= Task.human_attribute_name(:end_time)
       th= Task.human_attribute_name(:status)
       th= Task.human_attribute_name(:priority)
+      th= Task.human_attribute_name(:label)
       th
   tbody
     - @tasks.each do |task|
@@ -35,6 +39,9 @@ table.table.table-hover
         - elsif task.status == 2
           td = t('view.complete')
         td= task.priority_i18n
+        td
+          - task.labels.each do |label|
+            p = label.title
         td
           = link_to t('view.edit'), edit_task_path(task), class: 'btn btn-primary mr-3 btn-sm'
           = link_to  t('view.delete'), task, method: :delete, data: { confirm: t('confirm.delete_confirmation') }, class: 'btn btn-danger btn-sm'
