--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -9,10 +9,11 @@ h1 = t('view.task_index')
   .form-group
     = f.label :status_search, t('view.search_status')
     = select :task, :status, [[t('view.unselected'), ""], [t('view.not_started'), 0], [t('view.started'), 1], [t('view.complete'), 2]], class: 'form-control', id: 'status'
-  .form-group
-    = f.label :label, t('view.search_status')
-    = f.select("label_id", Label.pluck(:title, :id), { include_blank: true })
     = f.hidden_field :search, value: 'true'
+  .form-group
+    = f.label :label, t('view.search_label')
+    = f.select("label_id", Label.pluck(:title, :id), { include_blank: true })
+    = f.hidden_field :label_id, value: 'true'
   = submit_tag t('view.search'), name: nil, class: 'btn btn-primary btn-sm'
 
 .mb-3
@@ -41,7 +42,7 @@ table.table.table-hover
         td= task.priority_i18n
         td
           - task.labels.each do |label|
-            p = label.title
+            p.label-color = label.title
         td
           = link_to t('view.edit'), edit_task_path(task), class: 'btn btn-primary mr-3 btn-sm'
           = link_to  t('view.delete'), task, method: :delete, data: { confirm: t('confirm.delete_confirmation') }, class: 'btn btn-danger btn-sm'
