--- a/app/views/tasks/show.html.slim
+++ b/app/views/tasks/show.html.slim
@@ -20,6 +20,11 @@ table.table.table-hover
       th= Task.human_attribute_name(:priority)
       td= @task.priority_i18n
     tr
+      th= Task.human_attribute_name(:label)
+      td
+          - @task.labels.each do |label|
+            p.label-color = label.title
+    tr
       th= Task.human_attribute_name(:created_at)
       td= @task.created_at
     tr
