--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,32 +10,33 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
-  *= require bootstrap/dist/css/bootstrap.min
+ *= require bootstrap/dist/css/bootstrap.min
+ *= require simple_calendar
  *= require_tree .
  *= require_self
  */
 
- .btn {
-   margin-right: 10px;
- }
- form {
-   margin: 10px 0;
-   padding: 15px;
-   background-color: #EEEEEE;
- }
- h1 {
-   margin-top: 0;
- }
- li {
-  list-style-type: none;
- }
- .label-color {
-   text-align: center;
-   background-color: #808080;
-   color: #fff;
-   border-radius: 10px;
-   width: 60px;
-   float: left;
-   margin: 0 5px;
- }
- 
+.btn {
+  margin-right: 10px;
+}
+form {
+  margin: 10px 0;
+  padding: 15px;
+  background-color: #EEEEEE;
+}
+h1 {
+  margin-top: 0;
+}
+li {
+list-style-type: none;
+}
+.label-color {
+  text-align: center;
+  background-color: #808080;
+  color: #fff;
+  border-radius: 10px;
+  width: 60px;
+  float: left;
+  margin: 0 5px;
+}
+
